# QXlsx

./: .clang-format  .clang-tidy  .clang-tidy.checks  .clang-tidy.settings  .gitignore  .licrc  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Example.md  HowToSetProject-cmake.ko.md  HowToSetProject-cmake.md  HowToSetProject-cmake.zh-CN.md  HowToSetProject.ko.md  HowToSetProject.md  HowToSetProject.zh-CN.md  LICENSE  QXlsx.pro  README.RU.md  README.ko.md  README.md  README.zh-CN.md  TestEnv.md  ToTest.md  ToUpgrade.md  Vision.md  _config.yml  appveyor.yml
.github/: FUNDING.yml
.github/workflows/: android.yml  build.yml  cmake-ubuntu.yml  cmake.yml  ios.yml  macos.yml  nightly.yml  ubuntu-16-18.yml  ubuntu.yml  windows.yml
CMake/: QXlsxConfig.cmake.in
Copycat/: Copycat.pro  CopycatTableModel.cpp  CopycatTableModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  XlsxTab.cpp  XlsxTab.h  XlsxTableModel.cpp  XlsxTableModel.h  XlsxTableModel2.cpp  XlsxTableModel2.h  XlsxTableWidget.cpp  XlsxTableWidget.h  main.cpp  resources.qrc  test1-google.xlsx  test2-libre.xlsx  xlsx.h
Copycat/Qt-Table-Printer/: LICENSE  tableprinter.cpp  tableprinter.h
DateTime/: CMakeLists.txt  DateTime.pro  main.cpp  test.cpp
Docs/: README.md
ExcelTableEditor/: CMakeLists.txt  README.md  excelitemdelegate.cpp  excelitemdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h
ExcelViewer/: CMakeLists.txt  excelmodel.cpp  excelmodel.h  main.cpp  mainwindow.cpp  mainwindow.h
FormulaDump/: FormulaDum.pro  README.md  dump_options.hpp  formula_dump_fullcells.cpp  formula_dump_fullcells.hpp  formula_dump_options.hpp  formula_single_cell_evaluator.cpp  formula_single_cell_evaluator.hpp  main.cpp  mini_formula_evaluator.cpp  mini_formula_evaluator.hpp  mini_xlsx_eval_formula_evaluator.cpp
HelloAndroid/: DynArray2D.h  HelloAndroid.pro  XlsxModel.cpp  XlsxModel.h  XlsxTableModel.cpp  XlsxTableModel.h  main.cpp  main.qml  qml.qrc  test.xlsx
HelloExcel/: HelloExcel.pro  UseQXlsx.pri  calendar.cpp  chart.cpp  chartsheet.cpp  datavalidation.cpp  definename.cpp  demo.cpp  documentproperty.cpp  extractdata.cpp  formulas.cpp  hello.cpp  hyperlinks.cpp  image.cpp  main.cpp  mergecells.cpp  numberformat.cpp  readStyle.cpp  richtext.cpp  rowcolumn.cpp  style.cpp  worksheetoperations.cpp
HelloWorld/: CMakeLists-use.txt  CMakeLists.txt  HelloWorld.pro  QXlsx  main.cpp
IssueTest/: 91.xlsx  CMakeLists.txt  IssueTest.pro  WriteSharedFormula.py  main.cpp  run.cmd  test.cpp  test.qrc  test.xlsx
LargeData/: CMakeLists.txt  main.cpp
Pump/: CMakeLists.txt  LICENSE.txt  Pump.pro  ansi.h  ansicolor-w32.c  ansicolor-w32.h  colorprintf.h  main.cpp  pump.qrc  test.cpp  text_coloring.h
Pump/xlsx_files/: dir2.txt
QXlsx/: CMakeLists.txt  QXlsx-header.pri  QXlsx-source.pri  QXlsx.pri  QXlsx.pro  QXlsxConfig.cmake.in
QXlsx/cmake/: QXlsxConfig.cmake.in
QXlsx/cmake/modules/: CPackConfig.cmake  qxlsx-config-version.cmake.in  qxlsx-config.cmake.in
QXlsx/header/: xlsxabstractooxmlfile.h  xlsxabstractooxmlfile_p.h  xlsxabstractsheet.h  xlsxabstractsheet_p.h  xlsxcell.h  xlsxcell_p.h  xlsxcellformula.h  xlsxcellformula_p.h  xlsxcelllocation.h  xlsxcellrange.h  xlsxcellreference.h  xlsxchart.h  xlsxchart_p.h  xlsxchartsheet.h  xlsxchartsheet_p.h  xlsxcolor_p.h  xlsxconditionalformatting.h  xlsxconditionalformatting_p.h  xlsxcontenttypes_p.h  xlsxdatavalidation.h  xlsxdatavalidation_p.h  xlsxdatetype.h  xlsxdocpropsapp_p.h  xlsxdocpropscore_p.h  xlsxdocument.h  xlsxdocument_p.h  xlsxdrawing_p.h  xlsxdrawinganchor_p.h  xlsxformat.h  xlsxformat_p.h  xlsxglobal.h  xlsxmediafile_p.h  xlsxnumformatparser_p.h  xlsxreadsax.h  xlsxrelationships_p.h  xlsxrichstring.h  xlsxrichstring_p.h  xlsxsharedstrings_p.h  xlsxsimpleooxmlfile_p.h  xlsxstyles_p.h  (+8 more)
QXlsx/header/export/: qxlsx_export.h
QXlsx/source/: xlsxabstractooxmlfile.cpp  xlsxabstractsheet.cpp  xlsxcell.cpp  xlsxcellformula.cpp  xlsxcelllocation.cpp  xlsxcellrange.cpp  xlsxcellreference.cpp  xlsxchart.cpp  xlsxchartsheet.cpp  xlsxcolor.cpp  xlsxconditionalformatting.cpp  xlsxcontenttypes.cpp  xlsxdatavalidation.cpp  xlsxdatetype.cpp  xlsxdocpropsapp.cpp  xlsxdocpropscore.cpp  xlsxdocument.cpp  xlsxdrawing.cpp  xlsxdrawinganchor.cpp  xlsxformat.cpp  xlsxmediafile.cpp  xlsxnumformatparser.cpp  xlsxreadsax.cpp  xlsxrelationships.cpp  xlsxrichstring.cpp  xlsxsharedstrings.cpp  xlsxsimpleooxmlfile.cpp  xlsxstyles.cpp  xlsxtheme.cpp  xlsxutility.cpp  xlsxworkbook.cpp  xlsxworksheet.cpp  xlsxzipreader.cpp  xlsxzipwriter.cpp
QtXlsx/header/: xlsxcell.h  xlsxglobal.h
QtXlsx/source/: xlsxcell.cpp
QtXlsxWriter-Static/: QtXlsxWriter-Static.pri  QtXlsxWriter-Static.pro
QtXlsxWriter-Static/header/: xlsxdocument.h
ReadColor/: CMakeLists.txt  ReadColor.pro  color.qrc  color.xlsx  main.cpp
ShowConsole/: CMakeLists.txt  ShowConsole.pro  fort.c  fort.h  fort.hpp  main.cpp
Spreadsheet/: main.cpp  spreadsheet.cpp  spreadsheet.h  spreadsheetdelegate.h  spreadsheetitem.cpp
SpreadsheetExample/: main.cpp  printview.cpp  printview.h  spreadsheet.cpp  spreadsheet.h  spreadsheet.pro  spreadsheetdelegate.cpp  spreadsheetdelegate.h  spreadsheetitem.cpp  spreadsheetitem.h  ss-test.xlsx
TestExcel/: CMakeLists.txt  TestExcel.pro  UseQXlsx.pri  calendar.cpp  chart.cpp  chartextended.cpp  chartsheet.cpp  datavalidation.cpp  definename.cpp  demo.cpp  documentproperty.cpp  extractdata.cpp  extractdata_sax.cpp  formulas.cpp  google-spreadsheet.xlsx  hello.cpp  hyperlinks.cpp  image.cpp  main.cpp  mergecells.cpp  ms-number.xlsx  numberformat.cpp  pageMargins.cpp  readStyle.cpp  richtext.cpp  rowcolumn.cpp  style.cpp  worksheetoperations.cpp
WebServer/: CMakeLists.txt  WebServer.pro  context.hpp  main.cpp  recurse.hpp  request.hpp  response.hpp  ws.qrc
WhatType/: CMakeLists.txt  WhatType.pro  main.cpp
chartsquestions/: CMakeLists.txt  LICENSE  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sat_calc.cpp  sat_calc.h  sat_gui.pro  test.qrc
cmake/: QXlsx.pc.in
csv/: csv.pro  main.cpp  test.qrc  test.xlsx
dll/: CMakeLists.txt
etc/: test-env.md
(+3 files in other folders)
